--- a/presentation.html
+++ b/presentation.html
@@ -6,12 +6,49 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>QUALIFICA Luís Forra Presentation</title>
 </head>
 <body>
-    <div id="map">    
-        <i id="plane" class="fas fa-plane firstRotation"></i>
-    </div>
+    <div class="wrapper">
+        <div id="map" class="center">
+            <i id="plane" class="fas fa-plane firstRotation"></i>
+        </div>
+        <div id="content" class="center">
+            <ul>
+                <li>
+                    <img src="https://via.placeholder.com/150" alt="placeholder">
+                    <p>1900 - 19901</p>
+                    <p>Title</p>
+                </li>
+                <li>
+                    <img src="https://via.placeholder.com/150" alt="placeholder">
+                    <p>1900 - 19901</p>
+                    <p>Title</p>
+                </li>
+                <li>
+                    <img src="https://via.placeholder.com/150" alt="placeholder">
+                    <p>1900 - 19901</p>
+                    <p>Title</p>
+                </li>
+                <li>
+                    <img src="https://via.placeholder.com/150" alt="placeholder">
+                    <p>1900 - 19901</p>
+                    <p>Title</p>
+                </li>
+                <li>
+                    <img src="https://via.placeholder.com/150" alt="placeholder">
+                    <p>1900 - 19901</p>
+                    <p>Title</p>
+                </li>
+                <li>
+                    <img src="https://via.placeholder.com/150" alt="placeholder">
+                    <p>1900 - 19901</p>
+                    <p>Title</p>
+                </li>
+            </ul>
+        </div>
+    </div> <!-- end of wrapper -->
+    <footer class="center">Created by <spam>Luís Filipe Forra</em></footer>
     <script src="scripts.js"></script>
 </body>
 </html>
