added two new html pages. Added the basic functionality for the index page

--- a/presentation.html
+++ b/presentation.html
@@ -15,32 +15,32 @@
         </div>
         <div id="content" class="center">
             <ul>
-                <li>
+                <li class="imageCard hidden">
                     <img src="https://via.placeholder.com/150" alt="placeholder">
                     <p>1900 - 19901</p>
                     <p>Title</p>
                 </li>
-                <li>
+                <li class="imageCard hidden">
                     <img src="https://via.placeholder.com/150" alt="placeholder">
                     <p>1900 - 19901</p>
                     <p>Title</p>
                 </li>
-                <li>
+                <li class="imageCard hidden">
                     <img src="https://via.placeholder.com/150" alt="placeholder">
                     <p>1900 - 19901</p>
                     <p>Title</p>
                 </li>
-                <li>
+                <li class="imageCard hidden">
                     <img src="https://via.placeholder.com/150" alt="placeholder">
                     <p>1900 - 19901</p>
                     <p>Title</p>
                 </li>
-                <li>
+                <li class="imageCard hidden">
                     <img src="https://via.placeholder.com/150" alt="placeholder">
                     <p>1900 - 19901</p>
                     <p>Title</p>
                 </li>
-                <li>
+                <li class="imageCard hidden">
                     <img src="https://via.placeholder.com/150" alt="placeholder">
                     <p>1900 - 19901</p>
                     <p>Title</p>
@@ -48,7 +48,16 @@
             </ul>
         </div>
     </div> <!-- end of wrapper -->
-    <footer class="center">Created by <spam>Luís Filipe Forra</em></footer>
+    <footer class="center">
+        <p>
+            <span>
+                <a href="index.html"><</a>
+            </span>
+            <span>
+                <a href="end.html">></a>
+            </span>
+        </p>
+    </footer>
     <script src="scripts.js"></script>
 </body>
 </html>
