added icon image files, update the presentations-guideline, script js, end and presentation files

--- a/end.html
+++ b/end.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        .end {
+            font-size: 40px;
+            margin: 15% auto 0 auto;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <p>the end</p>
+    <p class="end">the end</p>
 </body>
 </html>
