--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>QUALIFICA Luís Forra Presentation</title>
     <style>
         .wrapper {
             width: 1000px;
@@ -14,6 +14,7 @@
 
         .full-name {
             font-size: 40px;
+            margin: 0 0 10px 0;
         }
 
         ul > li {
@@ -22,10 +23,17 @@
 
         ul {
             padding: 0;
+            margin: 0;
         }
 
         .hidden {
-            display: none;
+            /*display: none;*/
+        }
+
+        li > img {
+            width: 30px;
+            height: 30px;
+            padding-right: 20px;    
         }
 
     </style>
@@ -42,12 +50,12 @@
             <span class="name hidden">Forra</span>
         </p>
         <ul class="passions">
-            <li class="hidden">something</li>
-            <li class="hidden">something</li>
-            <li class="hidden">something</li>
-            <li class="hidden">something</li>
-            <li class="hidden">something</li>
-            <li class="hidden">something</li>
+            <li class="hidden"><img src="family.png"></li>
+            <li class="hidden"><img src="reading.png"></li>
+            <li class="hidden"><img src="yoga.png"></li>
+            <li class="hidden"><img src="rock-and-roll.png"></li>
+            <li class="hidden"><img src="code.png"></li>
+            <li class="hidden"><img src="console.png"></li>
         </ul>
     </div>
     <script>
