--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>QUALIFICA Luís Forra Presentation</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
     <style>
+        html {
+            font-family: 'Roboto', sans-serif;
+            background-color:  #dde2e3;
+            color: #72747a;
+        }
+
         .wrapper {
             width: 1000px;
             margin: 15% auto 0 auto;
@@ -27,7 +34,7 @@
         }
 
         .hidden {
-            /*display: none;*/
+            display: none;
         }
 
         li > img {
@@ -41,7 +48,7 @@
 <body>
     <div class="wrapper">
         <p class="full-name">
-            <span class="name hidden">Luis</span>
+            <span class="name hidden">Luís</span>
             <span class="name hidden">Filipe</span>
             <span class="name hidden">Oliveira</span>
             <span class="name hidden">Cousinha</span>
