--- a/end.html
+++ b/end.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <title>QUALIFICA Luís Forra Presentation</title>
     <style>
+        html {
+            font-family: 'Roboto', sans-serif;
+            background-color:  #dde2e3;
+        }
+
         .end {
             font-size: 40px;
             margin: 15% auto 0 auto;
