--- a/end.html
+++ b/end.html
@@ -4,22 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>QUALIFICA Luís Forra Presentation</title>
     <style>
         html {
             font-family: 'Roboto', sans-serif;
             background-color:  #dde2e3;
+            color: #72747a;
+        }
+        
+        .wrapper {
+            margin: 15% auto 0 auto;
+            text-align: center;
         }
 
         .end {
             font-size: 40px;
-            margin: 15% auto 0 auto;
-            text-align: center;
+        }
+
+        #quote {
+            margin-top: -120px;
+            margin-bottom: 0px;
+        }
+
+        #quote:before {
+            font-family: 'Source Sans Pro', sans-serif;
+            content: "“";
+            color: #545454;
+            font-size: 130px;
+            position: relative;
+            top: 56px;
+            left: -5px;
+        }
+
+        .author {
+            margin-top: 0;
         }
     </style>
 </head>
 <body>
-    <p class="end">the end</p>
+    <div class="wrapper">
+        <p class="end">the end</p>
+        <p id="quote">The impediment to action advances action. What stands in the way becomes the way.</p>
+        <p class="author">- Marcus Aurelius</p>
+    </div>
 </body>
 </html>
