--- a/presentation.html
+++ b/presentation.html
@@ -17,48 +17,44 @@
         <div id="content" class="center">
             <ul>
                 <li class="imageCard hidden">
-                    <img src="https://via.placeholder.com/150" alt="placeholder">
-                    <p>1900 - 1901</p>
-                    <p>Title</p>
+                    <div>
+                        <img src="https://via.placeholder.com/100" alt="placeholder">
+                        <p>Title</p>
+                    </div>
                 </li>
                 <li class="imageCard hidden">
-                    <img src="https://via.placeholder.com/150" alt="placeholder">
-                    <p>1900 - 1901</p>
-                    <p>Title</p>
+                        <div>
+                            <img src="https://via.placeholder.com/100" alt="placeholder">
+                            <p>Title</p>
+                        </div>
                 </li>
                 <li class="imageCard hidden">
-                    <img src="https://via.placeholder.com/150" alt="placeholder">
-                    <p>1900 - 1901</p>
-                    <p>Title</p>
+                        <div>
+                            <img src="https://via.placeholder.com/100" alt="placeholder">
+                            <p>Title</p>
+                        </div>
                 </li>
                 <li class="imageCard hidden">
-                    <img src="https://via.placeholder.com/150" alt="placeholder">
-                    <p>1900 - 1901</p>
-                    <p>Title</p>
+                        <div>
+                            <img src="https://via.placeholder.com/100" alt="placeholder">
+                            <p>Title</p>
+                        </div>
                 </li>
                 <li class="imageCard hidden">
-                    <img src="https://via.placeholder.com/150" alt="placeholder">
-                    <p>1900 - 1901</p>
-                    <p>Title</p>
+                        <div>
+                            <img src="https://via.placeholder.com/100" alt="placeholder">
+                            <p>Title</p>
+                        </div>
                 </li>
                 <li class="imageCard hidden">
-                    <img src="https://via.placeholder.com/150" alt="placeholder">
-                    <p>1900 - 1901</p>
-                    <p>Title</p>
+                        <div>
+                            <img src="https://via.placeholder.com/100" alt="placeholder">
+                            <p>Title</p>
+                        </div>
                 </li>
             </ul>
         </div>
     </div> <!-- end of wrapper -->
-    <footer class="center">
-        <p>
-            <span>
-                <a href="index.html"><</a>
-            </span>
-            <span>
-                <a href="end.html">></a>
-            </span>
-        </p>
-    </footer>
     <script src="scripts.js"></script>
 </body>
 </html>
