--- a/end.html
+++ b/end.html
@@ -26,6 +26,7 @@
         #quote {
             margin-top: -120px;
             margin-bottom: 0px;
+            font-style: italic;
         }
 
         #quote:before {
