--- a/presentation.html
+++ b/presentation.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Sue+Ellen+Francisco" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
@@ -18,43 +19,56 @@
             <ul>
                 <li class="imageCard hidden">
                     <div>
-                        <img src="https://via.placeholder.com/100" alt="placeholder">
-                        <p>Title</p>
+                        <div class="image-border">
+                            <img src="https://via.placeholder.com/100" alt="placeholder">
+                        </div>
+                        <p></p>
                     </div>
                 </li>
                 <li class="imageCard hidden">
-                        <div>
+                    <div>
+                        <div class="image-border">
                             <img src="https://via.placeholder.com/100" alt="placeholder">
-                            <p>Title</p>
                         </div>
+                        <p></p>
+                    </div>
                 </li>
                 <li class="imageCard hidden">
-                        <div>
+                    <div>
+                        <div class="image-border">
                             <img src="https://via.placeholder.com/100" alt="placeholder">
-                            <p>Title</p>
                         </div>
+                        <p></p>
+                    </div>
                 </li>
                 <li class="imageCard hidden">
-                        <div>
+                    <div>
+                        <div class="image-border">
                             <img src="https://via.placeholder.com/100" alt="placeholder">
-                            <p>Title</p>
                         </div>
+                        <p></p>
+                    </div>
                 </li>
                 <li class="imageCard hidden">
-                        <div>
+                    <div>
+                        <div class="image-border">
                             <img src="https://via.placeholder.com/100" alt="placeholder">
-                            <p>Title</p>
                         </div>
+                        <p>Sinfic</p>
+                    </div>
                 </li>
                 <li class="imageCard hidden">
-                        <div>
+                    <div>
+                        <div class="image-border">
                             <img src="https://via.placeholder.com/100" alt="placeholder">
-                            <p>Title</p>
                         </div>
+                        <p></p>
+                    </div>
                 </li>
             </ul>
         </div>
     </div> <!-- end of wrapper -->
+    <script src="image-information.js"></script>
     <script src="scripts.js"></script>
 </body>
 </html>
