add the close quotation to the end page

--- a/end.html
+++ b/end.html
@@ -36,7 +36,17 @@
             font-size: 130px;
             position: relative;
             top: 56px;
-            left: -5px;
+            left: -20px;
+        }
+
+        #quote:after {
+            font-family: 'Source Sans Pro', sans-serif;
+            content: "”";
+            color: #545454;
+            font-size: 130px;
+            position: relative;
+            top: 58px;
+            left: -11px;
         }
 
         .author {
